--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "com.unity.burst": "1.6.6",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "2.0.3",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.5.1",
     "com.unity.ml-agents": "2.0.1",
     "com.unity.render-pipelines.universal": "12.1.11",
     "com.unity.test-framework": "1.1.31",
